dark mode border fix

--- a/src/styles/preline/reform-element.scss
+++ b/src/styles/preline/reform-element.scss
@@ -1,5 +1,6 @@
 .reform-element {
-  @apply py-3 block border border-gray-200 rounded-md text-sm outline-none dark:bg-slate-900
+  @apply py-3 block border rounded-md text-sm outline-none
+  border-gray-200 dark:bg-slate-900 dark:border-gray-700 dark:text-gray-400
   w-full;
 
   &:disabled {
